# rustservice

./: .env  Cargo.toml  Dockerfile  README.md  example_db.db3  sqlite3.lib
src/: lib.rs  main.rs  sqlite_utilmod.rs  unit_test.rs  util.rs
