[package]
name = "rustservice"
version = "0.1.0"
edition = "2021"
[http]
# This setting can be used to help debug what's going on with HTTP requests made
# by Cargo. When set to `true` then Cargo's normal debug logging will be filled
# in with HTTP information, which you can extract with
# `CARGO_LOG=cargo::ops::registry=debug` (and `trace` may print more).
#
# Be wary when posting these logs elsewhere though, it may be the case that a
# header has an authentication token in it you don't want leaked! Be sure to
# briefly review logs before posting them.
debug = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
encoding ="0.2.33"
image = "0.25.1"
num-complex = "0.4.5"
webp="0.2.7"
# rocket="0.5.0"
# actix-web ="4.5.1"
serde = { version = "1.0.197" , features = ["derive"] }
axum = { version = "0.7.5" }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.3" }
hyper = { version = "1.2.0", features = ["full"] }
log = { version = "0.4.20" }
serde_json = { version = "1.0.95" }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
regex = "1.10.4"
lazy_static = "1.4.0"
rusqlite={version="0.31.0"}
rs-snowflake = "0.6.0"
once_cell={}
